test/tests/operators/xsv/error_read_csv_empty_schema.txt
error: `schema` must not be empty
 --> tests/operators/xsv/error_read_csv_empty_schema.tql:6:19
  |
6 |   read_csv schema=""
  |                   ^^ 
  |
